chartmuseum/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chartmuseum
spec:
  hosts:
    - helm.vongjon.com
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: chartmuseum.chartmuseum.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chartmuseum-local
spec:
  hosts:
    - helm-mirror.vongjon.com
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: local-museum-chartmuseum.chartmuseum.svc.cluster.local
            port:
              number: 8080
